clang/test/BSC/Negative/SafeZone/union_forbidden/union_forbidden.cbs
// RUN: %clang_cc1 -verify %s

void unionDef1(){
    safe {
        union UIn {  // expected-error{{union type is forbidden in the safe zone}}
          int x;
        };

        struct SMid {  // expected-error{{union type is forbidden in the safe zone}}
          union UIn u;
        };

        struct SOut {  // expected-error{{union type is forbidden in the safe zone}}
          struct SMid s2;
        };
    }
}

void unionDef2(){
    union UIn {
        int x;
    };
    struct SMid {
        union UIn u;
    };
    safe {
        struct SOut {  // expected-error{{union type is forbidden in the safe zone}}
          struct SMid s2;
        };
    }
}

void unionDecl(){
    union UIn {
        int x;
    };
    struct SMid {
        union UIn u;
    };
    struct SOut {
        struct SMid s2;
    };

    safe {
        union UIn u1 = {};  // expected-error{{union type is forbidden in the safe zone}}
        union UIn *p1 = nullptr;  // expected-error{{union type is forbidden in the safe zone}}
        union UIn *borrow p2 = &mut u1;  // expected-error{{union type is forbidden in the safe zone}}

        struct SOut s1 = {};  // expected-error{{union type is forbidden in the safe zone}}
        struct SOut *p3 = nullptr;  // expected-error{{union type is forbidden in the safe zone}}
        struct SOut *borrow p4 = &mut s1;  // expected-error{{union type is forbidden in the safe zone}}
    }
}

void unionTypedef(){
    typedef union UIn {
        int x;
    } UTypedef;
    safe {
        UTypedef u = {};  // expected-error{{union type is forbidden in the safe zone}}
        UTypedef *p1 = nullptr;  // expected-error{{union type is forbidden in the safe zone}}
        UTypedef *borrow p2 = &mut u;  // expected-error{{union type is forbidden in the safe zone}}
    }
}

void unionArray() {
    union UArr {
        int x;
    };

    safe {
        union UArr arr[2] = {}; // expected-error{{union type is forbidden in the safe zone}}
        union UArr *parr[2] = {}; // expected-error{{union type is forbidden in the safe zone}}
    }
}
